--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@
     background-color: #7FFFD4;
 }
 
-.debug .footer-bottom col{
+.debug .footer-bottom .col{
     background-color: #FFC0CB;
 }
 
@@ -123,6 +123,9 @@ header .menu-column li{
 }
 
 /*main*/
+main{
+    width: 100%;
+}
 
 main section{
     padding: 50px;
@@ -132,20 +135,23 @@ main section{
     background-color: lightgrey;
 }
 
-section .container{
+.section-container{
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
     height: 100%;
     justify-content: space-between;
+
 }
 
 .big-column{
     width: 60%;
+    height: 100%;
 }
 
 .small-column{
     width: 40%;
+    height: 100%;
 }
 
 .full-column{
@@ -191,5 +197,5 @@ footer{
 }
 
 .footer-bottom col{
-    padding: 5px;  
+    padding: 5px; 
 }
